@@ -14,6 +14,8 @@ x. guardblocks, blocks per send
 	- Adam suggests populating a bogus datastream entry with no corresponding baselines
 11. support mark5b
 12. support VDIF
+13. support baselines=
+14. implement maxLength
 
 Concerns outside vex2difx proper
 
